fix buttons on mobile

--- a/packages/frontend/app/routes/home/home.module.css
+++ b/packages/frontend/app/routes/home/home.module.css
@@ -160,7 +160,14 @@
   }
 }
 
+@media (max-width: 768px) {
 
+.buttons{
+  display: flex;
+  justify-content: center;
+ 
+}
+}
 
 .floatingToken {
   animation-name: floatAcross;
